[package]
name = "raw_pointer"
version = "0.1.2"
description = "Safely handling raw mutable pointers to a generic type"
authors = ["Jackson Isenberg"]
license = "MIT"
repository = "https://github.com/JIceberg/raw-pointer"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
